crates/lang/macro/tests/ui/contract/fail/constructor-input-non-codec.stderr
error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
  --> $DIR/constructor-input-non-codec.rs:13:28
   |
13 |         pub fn constructor(_input: NonCodecType) -> Self {
   |                            ^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodecType`
note: required by a bound in `DispatchInput`
  --> $DIR/type_check.rs:41:8
   |
41 |     T: scale::Decode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
   --> $DIR/constructor-input-non-codec.rs:13:9
    |
13  | /         pub fn constructor(_input: NonCodecType) -> Self {
14  | |             Self {}
15  | |         }
    | |_________^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
    |
    = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodecType`
note: required by a bound in `parity_scale_codec::Decode::decode`
   --> $DIR/codec.rs:284:15
    |
284 |     fn decode<I: Input>(input: &mut I) -> Result<Self, Error>;
    |                  ^^^^^ required by this bound in `parity_scale_codec::Decode::decode`

error[E0277]: the trait bound `NonCodecType: WrapperTypeEncode` is not satisfied
  --> $DIR/constructor-input-non-codec.rs:3:1
   |
3  |   #[ink::contract]
   |   ^^^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodecType`
...
13 | /         pub fn constructor(_input: NonCodecType) -> Self {
14 | |             Self {}
15 | |         }
   | |_________- required by a bound introduced by this call
   |
   = note: required because of the requirements on the impl of `Encode` for `NonCodecType`
   = note: this error originates in the attribute macro `ink::contract` (in Nightly builds, run with -Z macro-backtrace for more info)
